Hide Scroll Down Arrow On Mobile Device Set ScrollDown Arrow Left Offset to 49% to get a better center (Perhaps fix this properly later....)
 On branch dev

 Changes to be committed:
	modified:   sass/screen.scss
	modified:   static/assets/stylesheets/screen.css

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -343,8 +343,29 @@ body, html {
     width: 25px;//force 1:1 size
     position: fixed;
     top: 60%;
-    left: 50%;
+    left: 49%;
     z-index: -5;
+    display: block;
+
+    //Don't bother telling the user to scroll on a mobile device
+    @include respond-to('mobile') {
+        display: none;
+    }
+
+    @include respond-to('small') {
+        display: block;
+    
+    }
+
+    @include respond-to('medium') {
+        display: block;
+
+    }
+
+    @include respond-to('large') {
+        display: block;
+        
+    }
   
 }
 
